--- a/about.html
+++ b/about.html
@@ -260,9 +260,9 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <div>
                     <h2 class="text-3xl md:text-4xl font-serif font-bold text-tanzania-green mb-6">Introduction</h2>
-                    <p class="text-lg text-gray-700 mb-6">The Centre for Sports Research and Governance (CSRG), in its patriotic commitment to foster national harmony, inclusive development, and cultural diplomacy, proudly presents the Tanzania Traditional Dances Festival (TTDF)—a historic and unifying cultural event.</p>
+                    <p class="text-lg text-gray-700 mb-6">The Centre for Sports Research and Governance (CSRG), in its patriotic commitment to foster national harmony, inclusive development, and cultural diplomacy, proudly presents the Tanzania Traditional Dances Festival (TTDF) a historic and unifying cultural event.</p>
                     <p class="text-lg text-gray-700 mb-6">Scheduled for 4th-5th September 2025 in Dodoma, the TTDF brings together traditional dances troupes from all 31 administrative regions of Mainland Tanzania and Zanzibar, symbolizing the richness, diversity, and unity of our great nation.</p>
-                    <p class="text-lg text-gray-700">This festival is a celebration of Umoja wa Kitaifa—a tribute to the foundations of our Union between Tanzania Mainland and Zanzibar.</p>
+                    <p class="text-lg text-gray-700">This festival is a celebration of Umoja wa Kitaifa a tribute to the foundations of our Union between Tanzania Mainland and Zanzibar.</p>
                 </div>
                 <div class="bg-gradient-to-br from-tanzania-green to-tanzania-blue rounded-2xl p-8 text-white text-center">
                     <i class="fas fa-unity text-6xl text-tanzania-yellow mb-6"></i>
@@ -279,7 +279,7 @@
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-serif font-bold text-tanzania-green mb-6">General Objective</h2>
                 <div class="max-w-4xl mx-auto">
-                    <p class="text-xl text-gray-700">The Centre for Sports Research and Governance Limited (CSRG) recognizes this cultural asset and has decided to organize the "Tanzania Traditional Dances Festival 2025: Celebrating Unity and Peace through Cultural Heritage Ahead of the General Election." The festival will act as a strategic platform to celebrate our Cultural Heritage, invigorate the spirit of togetherness, and promote peace and tranquility.</p>
+                    <p class="text-xl text-gray-700">The Centre for Sports Research and Governance Limited (CSRG) recognizes this cultural asset and has decided to organize the Tanzania Traditional Dances Festival 2025: Celebrating Unity and Peace through Cultural Heritage Ahead of the General Election." The festival will act as a strategic platform to celebrate our Cultural Heritage, invigorate the spirit of togetherness, and promote peace and tranquility.</p>
                 </div>
             </div>
         </div>
@@ -393,3 +393,4 @@
     </script>
 </body>
 </html>
+
